--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^13.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
@@ -15,5 +16,4 @@
   "author": "",
   "license": "ISC",
   "description": ""
-  
 }
